--- a/Reto_Visualización_Análisis_Descriptivo.ipynb
+++ b/Reto_Visualización_Análisis_Descriptivo.ipynb
@@ -148,7 +148,7 @@
         "#************************************* Main ***************************************************\n",
         "\n",
         "#Para archivo 1\n",
-        "dF_arch1=pd.read_csv("reto_1.csv",index_col=\"Meses\") #Lectura del archivo\n",
+        "dF_arch1=pd.read_csv(\"reto_1.csv\",index_col=\"Meses\") #Lectura del archivo\n",
         "ylabels_1=[\"Número de autobuses despachados por mes\",\n",
         "           \"Cantidad de personal de apoyo por mes\",\n",
         "           \"Pasajeros transportados por mes\",\n",
@@ -156,7 +156,7 @@
         "graph_box(dF_arch1,ylabels_1)\n",
         "\n",
         "#Para archivo 3\n",
-        "dF_arch3=pd.read_csv("reto_3.csv",usecols=[\"Entidad\",\"Automovil\",\"Autobus\",\"Camioneta\"]) #Lectura del archivo\n",
+        "dF_arch3=pd.read_csv(\"reto_3.csv\",usecols=[\"Entidad\",\"Automovil\",\"Autobus\",\"Camioneta\"]) #Lectura del archivo\n",
         "dF_arch3.set_index(\"Entidad\",inplace=True)#Se usa la columna clase como índice\n",
         "ylabels_3=[\"Número de automoviles en Entidades\",\n",
         "           \"Número de autobuses en Entidades\",\n",
